--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="link-change" href="#" tabindex="0">Change</a>
             </div>
             <button class="button-payment" tabindex="0">Proceed to Payment</button>
-            <a class="link-cancel-order" href="#" tabindex="">Cancel Order</a>
+            <a class="link-cancel-order" href="#" tabindex="0">Cancel Order</a>
         </div>
     </main>
 </body>
